--- a/5. Monitoring_Report-Active.Rmd
+++ b/5. Monitoring_Report-Active.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "<span style='font-size: 18px'> <span style='text-align: center'> PRISMA & ReMAPP Monitoring Report (Issued: 2024-07-25)"
+title: "<span style='font-size: 18px'> <span style='text-align: center'> PRISMA & ReMAPP Monitoring Report (Issued: 2024-08-27)"
 output:
   pdf_document:
     toc: no
@@ -18,7 +18,7 @@ editor_options:
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, out.width = "100%") 
 knitr::opts_chunk$set(out.width = "100%", fig.align = "center")
 
-## last updated: 16 April 2024
+## last updated: 27 August 2024
 
 library(tidyverse) 
 library(knitr) 
@@ -34,7 +34,7 @@ library(webshot2)
 library(grid)
 library(gridExtra)
 
-UploadDate = "2024-06-28" 
+UploadDate = "2024-08-23" 
 
 setwd(paste0("D:/Users/stacie.loisate/Box/Monitoring-Report-Active/data/"))
 
@@ -59,7 +59,7 @@ tb_theme1 <- function(matrix){
         cell_fill(color = "skyblue4"),
         cell_text(weight = "bold"),
         cell_text(v_align = "middle"),
-        cell_text(color = "white", size = px(18))
+        cell_text(color = "white", size = px(30))
       ),
       locations = list(
         cells_title()
@@ -68,7 +68,7 @@ tb_theme1 <- function(matrix){
     tab_style(
       style = list(
         cell_fill(color = "cadetblue1"),
-        cell_text(color = "black", size = px(18)),
+        cell_text(color = "black", size = px(30)),
         cell_text(v_align = "middle") 
       ),
       locations = list(
@@ -80,7 +80,7 @@ tb_theme1 <- function(matrix){
     tab_style(
       style = list(
         cell_fill(color = "aliceblue"),
-        cell_text(v_align = "middle", size = px(18))
+        cell_text(v_align = "middle", size = px(30))
       ),
       locations = list(
         cells_stub()
@@ -88,7 +88,7 @@ tb_theme1 <- function(matrix){
     ) %>% 
     tab_style(
       style = list(
-        cell_text(align = "center", size = px(18)) 
+        cell_text(align = "center", size = px(30)) 
       ),
       locations = list(
         cells_column_labels(columns = everything())
@@ -96,7 +96,7 @@ tb_theme1 <- function(matrix){
     ) %>% 
     tab_style(
       style = list(
-        cell_text(align = "center", size = px(18)) 
+        cell_text(align = "center", size = px(30)) 
       ),
       locations = list(
         cells_body(columns = everything())
@@ -121,8 +121,8 @@ g_legend <- function(p) {
   return(legend_gtable)
 }
 
-
 setwd(paste0("D:/Users/stacie.loisate/Box/Monitoring-Report-Active/tables/"))
+
 ```
 
 **Abbreviations:**
@@ -139,20 +139,21 @@ study to establish global hemoglobin thresholds for maternal anemia
 
 **Versions:**
 
-**Date issued:** 2024-07-25
+**Date issued:** 2024-08-27
 
-**Included data last updated in Synapse:** 2024-06-28
+**Included data last updated in Synapse:** 2024-08-23 (Pakistan: 2024-08-16)
 
 **Last enrollment date:**
 
--   Kenya: 2024-06-28
--   Pakistan: 2024-06-21
--   Ghana: 2024-06-13
--   Zambia: 2024-06-13
--   India CMC: 2024-06-13
--   India SAS: 2024-06-28
+-   Kenya: 2024-08-23
+-   Pakistan: 2024-08-09
+-   Ghana: 2024-08-16
+-   Zambia: 2024-07-11
+-   India CMC: 2024-08-09
+-   India SAS: 2024-08-16
 
 ```{r, results='hide' }
+
 #check last day of screening and enrollment
 lastscreen <- MatData_Screen_Enroll %>%
   filter(PRESCREEN == 1) %>%
@@ -270,10 +271,13 @@ tab_footnote(
 )
 ```
 
-```{r, out.width = '100%'}
-prisma_tab1 <- prisma_tab1 %>% gtsave("prisma_tab1.png", expand = 10)
-knitr::include_graphics("prisma_tab1.png")
-```
+<!-- ```{r, out.width = '100%'} -->
+
+<!-- prisma_tab1 <- prisma_tab1 %>% gtsave("prisma_tab1.png", expand = 10) -->
+<!-- knitr::include_graphics("prisma_tab1.png") -->
+
+
+<!-- ``` -->
 
 \newpage
 
@@ -1989,9 +1993,11 @@ ANC32 <- Prot_Compliance_Anc %>%
         ),
         
    "MNH01 Ultrasound" = paste0(
-        format(sum(M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1, na.rm = TRUE), nsmall = 0, digits = 2),
+        format(sum(((M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1) |
+                        (M01_VISIT_COMPLETE_5 == 1 & ANC32_PASS_LATE == 1) & PC_ANC32_DENOM==1), na.rm = TRUE), nsmall = 0, digits = 2),
         " (",
-        format(round(sum(M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1, na.rm = TRUE)/sum(PC_ANC32_DENOM==1, na.rm = TRUE)*100, 2), nsmall = 0, digits = 2),
+        format(round(sum(((M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1) |
+                        (M01_VISIT_COMPLETE_5 == 1 & ANC32_PASS_LATE == 1) & PC_ANC32_DENOM==1), na.rm = TRUE)/sum(PC_ANC32_DENOM==1, na.rm = TRUE)*100, 2), nsmall = 0, digits = 2),
         ")"),
 
       "MNH04 ANC Clinical Status" = paste0(
@@ -2038,9 +2044,11 @@ ANC32 <- Prot_Compliance_Anc %>%
         ),
         
     "MNH01 Ultrasound" = paste0(
-        format(sum(M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1, na.rm = TRUE), nsmall = 0, digits = 2),
+        format(sum(((M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1) |
+                   (M01_VISIT_COMPLETE_5 == 1 & ANC32_PASS_LATE == 1) & PC_ANC32_DENOM==1), na.rm = TRUE), nsmall = 0, digits = 2),
         " (",
-        format(round(sum(M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1, na.rm = TRUE)/sum(PC_ANC32_DENOM==1, na.rm = TRUE)*100, 2), nsmall = 0, digits = 2),
+        format(round(sum(((M01_VISIT_COMPLETE_4 == 1 & ANC32_PASS_LATE == 1) |
+                        (M01_VISIT_COMPLETE_5 == 1 & ANC32_PASS_LATE == 1) & PC_ANC32_DENOM==1), na.rm = TRUE)/sum(PC_ANC32_DENOM==1, na.rm = TRUE)*100, 2), nsmall = 0, digits = 2),
         ")"),
 
       "MNH04 ANC Clinical Status" = paste0(
@@ -2313,7 +2321,7 @@ tab_footnote(
     footnote = html("<span style='font-size: 18px'><sup>c</sup> denominator is n completed any form with visit status=complete ANDvisit type=ANC-28  AND passed late window with >30 weeks gestation.</span>")
 ) %>% 
 tab_footnote(
-    footnote = html("<span style='font-size: 18px'><sup>d</sup> denominator is n completed any form with visit status=complete AND visit type=ANC-32  AND passed late window with>33 weeks gestation.</span>")
+    footnote = html("<span style='font-size: 18px'><sup>d</sup> denominator is n completed any form with visit status=complete AND visit type=ANC-32  AND passed late window with>33 weeks gestation. Ultrasounds completed during the ANC36 on time window are included.</span>")
 ) %>% 
 tab_footnote(
     footnote = html("<span style='font-size: 18px'><sup>e</sup> denominator is n completed any form with visit status=complete AND visit type=ANC-36  AND passed late window with >38 weeks gestation.</span>")
@@ -3350,7 +3358,7 @@ ggplot(data = figure2, aes(x = AGE_AT_UPLOAD_DAYS)) +
   scale_x_continuous(breaks = seq(294, 560, by = 14),
                      label = as.character(seq(42, 80, by = 2)),
                      limits = c(294,560)) +
-  scale_y_continuous(labels = scales::number_format(scale = 1, accuracy = 1)) +
+  scale_y_continuous(labels = scales::number_format(scale = 1)) + # , accuracy = 1
   xlab("Estimated Gestational Age") +
   ylab("Number of participants")
 
